<resources>
    <string name="app_name">Nirbhay</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="already_have_an_account_sign_in">Already have an account? | Sign in</string>
    <string name="emailicon">emailicon</string>
    <string name="welcome_to_nirbhay">Create a new account</string>
    <string name="phone_number">Phone Number</string>
    <string name="Sign_in_to_continue">Sign in to continue</string>
    <string name="not_yet_registered_signup_now">Not yet registered? | SignUp Now</string>
    <string name="hello">Hello!</string>
    <string name="welcome_back">Welcome back!!</string>
    <string name="welcome_to_nirbhay1">Welcome to Abhaya</string>
    <string name="get_started">Get Started</string>
    <string name="get_started_info">Empowering Women: Your Safety, Our Priority – Discover the Ultimate Security App.</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="forgot_password">forgot password?</string>
    <string name="title_activity_homepage">homepage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottomnavigation">bottomnavigation</string>
    <string name="emergency_sos">Emergency SOS</string>
    <string name="title_activity_maps">Maps</string>
    <string name="nearby_police_stations">Nearby police stations</string>
    <string name="nearby_bus_stations">nearby bus stations</string>
    <string name="nearby_pharmacy">nearby pharmacy</string>
    <string name="self_defense_videos">Self-Defense videos:</string>
</resources>